Fix grid areas on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1410,6 +1410,7 @@ section {
 		display: grid;
 		align-items: flex-start;
 		grid-template-columns: 1fr;
+		grid-template-areas: "zones" "dungeons" "raids" "bgs" "cities";
 		grid-gap: 20px;
 		@include respond-above(sm) {
 			grid-template-columns: 1fr 1fr;
